--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -84,8 +84,8 @@ block content
          h3=item.name
          h4(class='text-xs font-light')=item.designation
    div(class="btn-click") 
-    button(type="button" class="slick-prev")
-     img(src="./assets/images/icon-prev.png", alt="")
+    button(type="button" class="slick-prev bg-grey")
+     img(src="./assets/images/icon-prev.png", alt="icon-prev")
     button(type="button" class="slick-next") 
-     img(src="./assets/images/icon-next.png", alt="")         
+     img(src="./assets/images/icon-next.png", alt="icon-next")         
    
