--- a/src/pages/about.pug
+++ b/src/pages/about.pug
@@ -53,17 +53,20 @@ block content
         img(src=`./assets/images/${item.icon}`, alt=item.alt )
         h3=item.title 
         p=item.describe    
-  ul(class="container flex justify-center flex-wrap gap-9 mt-[70px] ") 
-   li 
-    img(src="./assets/images/logo-1.png", alt="")      
-   li 
-    img(src="./assets/images/logo-2.png", alt="") 
-   li 
-    img(src="./assets/images/logo-3.png", alt="")
-   li 
-    img(src="./assets/images/logo-4.png", alt="")  
-   li 
-    img(src="./assets/images/logo-5.png", alt="") 
+  block list-images
+   ul(class="container flex justify-center flex-wrap gap-9 mt-[70px] ") 
+    li 
+     img(src="./assets/images/logo-6.png")
+    li 
+     img(src="./assets/images/logo-1.png", alt="")      
+    li 
+     img(src="./assets/images/logo-2.png", alt="") 
+    li 
+     img(src="./assets/images/logo-3.png", alt="")
+    li 
+     img(src="./assets/images/logo-4.png", alt="")  
+    li 
+     img(src="./assets/images/logo-5.png", alt="") 
  section(class='bg-grey') 
   div(class="container")
    h2(class='text-center') Meet our team
