--- a/src/includes/header.pug
+++ b/src/includes/header.pug
@@ -9,7 +9,7 @@ div(class='container flex justify-between')
    li 
     a(href="./about.html" , class='link text-grey') About us
    li 
-    a(href="" , class='link text-grey') Features
+    a(href="./features.html" , class='link text-grey') Features
    li 
     a(href="" , class='link text-grey') Pricing
    li 
