--- a/src/includes/header.pug
+++ b/src/includes/header.pug
@@ -11,7 +11,7 @@ div(class='container flex justify-between')
    li 
     a(href="./features.html" , class='link text-grey') Features
    li 
-    a(href="" , class='link text-grey') Pricing
+    a(href="./pricing.html" , class='link text-grey') Pricing
    li 
     a(href="" , class='link text-grey') Faq
    li  
