--- a/src/pages/about.pug
+++ b/src/pages/about.pug
@@ -1,84 +1,79 @@
+//- about.pug
 extends layout.pug
 
+//- Inclure le fichier mixin
+include ../includes/mixins.pug
+
 block title 
- title Finsweet-About
+  title Finsweet-About
 
 block content 
- block section-modulable
-  section(class='container flex justify-between gap-2')
-   each item in our_design
-    div(class="section-content")
-     h1(class="title_before" data-content="About us")=item.title
-     p=item.describe
-    img(src=`./assets/images/${item.img}`, alt=item.alt , class="hero-section__img") 
- section(class="container bg-[#F4F5F5] pb-0") 
-  div(class="flex items-end justify-between space-x-4 px-[70px] pb-[80px]")
-   div(class="max-w-[515px]") 
-    h2(class="title_before text-2xl" data-content="Who we are") Goal focussed
-    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-   div(class="max-w-[515px]") 
-    h2(class="text-2xl") Continuous improvement
-    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  
-  img(src="./assets/images/focussed-image.png", alt="image-focussed" , class='w-full')  
- section(class='container') 
-  h2(class="text-center") The process we follow
-  ul(class="flex justify-center flex-wrap gap-x-5 gap-y-10 mt-[48px]") 
-   each item in process 
-    li(class="max-w-[270px]") 
-     img(src= `./assets/images/${item.src}`, alt="line-icon" , class="mb-[20px] w-full") 
-     h3(class="mb-3")=item.title 
-     p=item.describe
- div(class='bg-accent')
   block section-modulable
-   section(class='container flex justify-between gap2')
-    each item in our_mission
-     div(class="section-content")
-      h2(class="title_before" data-content="Our mission")=item.title
-      p=item.describe
-     img(src=`./assets/images/${item.img}`, alt=item.alt , class="hero-section__img")     
-  block section-modulable
-   section(class='container flex justify-between flex-row-reverse pt-0 gap-2')
-    each item in our_vision
-     div(class="section-content")
-      h2(class="title_before" data-content="Our vision")=item.title
-      p=item.describe
-     img(src=`./assets/images/${item.img}`, alt=item.alt , class="hero-section__img")
- section 
-  block cards 
-    div(class='container')
-     h2(class="text-center max-w-[630px] mx-auto") The benefits of working with us
-     ul(class="features-list")
-      each item in benefits 
-       li(class="features-list_item bg-grey")
-        img(src=`./assets/images/${item.icon}`, alt=item.alt )
-        h3=item.title 
-        p=item.describe    
-  block list-images
-   ul(class="container flex justify-center flex-wrap gap-9 mt-[70px] ") 
-    li 
-     img(src="./assets/images/logo-6.png")
-    li 
-     img(src="./assets/images/logo-1.png", alt="")      
-    li 
-     img(src="./assets/images/logo-2.png", alt="") 
-    li 
-     img(src="./assets/images/logo-3.png", alt="")
-    li 
-     img(src="./assets/images/logo-4.png", alt="")  
-    li 
-     img(src="./assets/images/logo-5.png", alt="") 
- section(class='bg-grey') 
-  div(class="container")
-   h2(class='text-center') Meet our team
-   ul(class="multiple-items flex justify-center mt-[48px] space-x-5") 
-    each item in team
-     li
-      img(src=`assets/images/${item.img}`)
-      h3=item.name 
-      h4=item.designation
-   div(class='flex justify-center mx-auto mt-[40px]') 
-    button(type="button" , class="slick-prev bg-white")
-     img(src="./assets/images/icon-prev.png", alt="icon-prev")
-    button(type="button" , class="slick-next") 
-     img(src="./assets/images/icon-next.png", alt="icon-next")         
+    +sectionModulable('', false, [about_groupes[0].our_design], 'About us')
+    
+  section(class="container bg-[#F4F5F5] pb-0") 
+    div(class="flex items-end justify-between space-x-4 px-[70px] pb-[80px]")
+      div(class="max-w-[515px]") 
+        h2(class="title_before text-2xl" data-content="Who we are") Goal focussed
+        p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      div(class="max-w-[515px]") 
+        h2(class="text-2xl") Continuous improvement
+        p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  
+    img(src="./assets/images/focussed-image.png", alt="image-focussed" , class='w-full')  
+    
+  section(class='container') 
+    h2(class="text-center") The process we follow
+    ul(class="flex justify-center flex-wrap gap-x-5 gap-y-10 mt-[48px]") 
+      each item in process 
+        li(class="max-w-[270px]") 
+          img(src= `./assets/images/${item.src}`, alt="line-icon" , class="mb-[20px] w-full") 
+          h3(class="mb-3")= item.title 
+          p= item.describe
+          
+  div(class='bg-accent')
+    block section-modulable
+      +sectionModulable('', false, [about_groupes[0].our_mission], 'Our mission')
       
+    block section-modulable
+      +sectionModulable('container pt-0 ', true, [about_groupes[0].our_vision], 'Our vision')
+      
+  section 
+    block cards 
+      div(class='container')
+        h2(class="text-center max-w-[630px] mx-auto") The benefits of working with us
+        ul(class="features-list")
+          each item in benefits 
+            li(class="features-list_item bg-grey")
+              img(src=`./assets/images/${item.icon}`, alt=item.alt )
+              h3= item.title 
+              p= item.describe    
+              
+    block list-images
+     ul(class="container flex justify-center flex-wrap gap-9 mt-[70px]") 
+      li 
+        img(src="./assets/images/logo-6.png")
+      li 
+        img(src="./assets/images/logo-1.png", alt="")      
+      li 
+        img(src="./assets/images/logo-2.png", alt="") 
+      li 
+        img(src="./assets/images/logo-3.png", alt="")
+      li 
+        img(src="./assets/images/logo-4.png", alt="")  
+      li 
+        img(src="./assets/images/logo-5.png", alt="") 
+        
+  section(class='bg-grey') 
+    div(class='container')
+      h2(class='text-center') Meet our team
+      ul(class="multiple-items flex justify-center mt-[48px] space-x-5") 
+        each item in team
+          li
+            img(src=`assets/images/${item.img}`)
+            h3= item.name 
+            h4= item.designation
+      div(class='flex justify-center mx-auto mt-[40px]') 
+        button(type="button" , class="slick-prev bg-white")
+          img(src="./assets/images/icon-prev.png", alt="icon-prev")
+        button(type="button" , class="slick-next") 
+          img(src="./assets/images/icon-next.png", alt="icon-next")
