--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,3 +1,4 @@
+//- index.pug
 extends layout.pug
 
 block title 
@@ -30,7 +31,7 @@ block content
             img(src=`./assets/images/${item.img}`, alt="" )  
             h3(class='my-[8px]')=item.title 
             p=item.describe 
-  section(class='container pb-2') 
+  section(class='container pb-[80px]') 
     div(class='flex justify-between')
       h2 View our projects
       a(href="#") View More
