--- a/src/pages/layout.pug
+++ b/src/pages/layout.pug
@@ -1,3 +1,4 @@
+//- layout.pug
 doctype html
 html(lang="en")
     head
@@ -10,7 +11,7 @@ html(lang="en")
         script(src='https://kit.fontawesome.com/04a76b9a09.js', crossorigin='anonymous')
         script(src='https://code.jquery.com/jquery-3.6.0.min.js')
         script(src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js')
-        script(src="./assets/js/main.js" defer)
+        script(src="./assets/js/slick.js" defer)
 
     body
     
