--- a/src/includes/header.pug
+++ b/src/includes/header.pug
@@ -16,4 +16,4 @@ div(class='container flex justify-between')
     a(href="" , class='link text-grey') Faq
    li  
     a(href="" , class='link text-grey') Blog
-  a(href="" , class=('btn')) Contact us   
+  a(href="./contact.html" , class=('btn')) Contact us   
