--- a/src/pages/pricing.pug
+++ b/src/pages/pricing.pug
@@ -5,7 +5,7 @@ block title
  title Finsweet-Pricing
 
 block content
- section(class='container')
+ section(class='container pb-0')
   block section__contenu
    div(class='mx-auto max-w-[563px] text-center')
     h1(class='mb-[16px]') Our Pricing Plans
@@ -21,3 +21,17 @@ block content
        li=listItem
      button(class="btn") 
       a(href="#") Get started  
+ block accordion_section
+  section(class='container flex items-start justify-between')
+   block section_title 
+    div(class='max-w-[409px]')
+     h2(class='mb-[16px]') Frequently asked questions
+     a(href="" , class='text-royal-blue') Contact us for more info
+    div(class='w-[50%]')
+     each item in info_accordion 
+      details(class='accordion_details')
+       summary(class="summary_after flex justify-between space-x-2 mb-3") 
+        div(class="flex gap-x-7")
+         h4(class='text-base text-royal-blue font-medium')=item.num
+         h3(class='font-medium')=item.title
+       p(class='mx-auto max-w-[540px] mb-[20px]')=item.describe
