--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -104,4 +104,19 @@ block content
           h4(class='text-base text-royal-blue font-medium')=item.num
           h3(class='font-medium')=item.title
         p(class='mx-auto max-w-[540px] mb-[20px]')=item.describe
-     
+  section(class='container flex bg-tint-blue p-0')
+   div(class='bg-custom-bg bg-repeat-round min-h-[630px] max-w-[656px]')
+    div(class='bg-opacity-bg pt-[96px] px-[86px] min-h-[630px]') 
+     h2(class='text-white mb-[24px]') Building stellar websites for early startups
+     p(class='text-white') Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.
+   div(class='px-[50px] pt-[96px] pb-[48px]') 
+    h3(class='text-white text-lg font-medium') Send inquiry
+    p(class='text-grey mt-[16px]') Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+    form(action="", class="grid gap-y-3 my-[40px]")
+     input(type="text", placeholder="Your Name", class="py-[14px] px-4 rounded-lg border border-grey" required)
+     input(type="email", placeholder="Email", class="py-[14px] px-4 rounded-lg border border-grey" required)
+     input(type="text", placeholder="Paste your Figma design URL", class="py-[14px] px-4 rounded-lg border border-grey" required)
+     button(class='btn font-medium mt-4') Send an Inquiry
+    a(href="#" class='flex justify-center text-white') Get in touch with us
+     i(class="fa-solid fa-arrow-right ml-3")
+  section     
