--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -13,9 +13,9 @@ block content
           p(class="text-grey mb-[48px]") Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
           ul(class="flex space-x-[40px]") 
             li
-              a(href="#" , class="btn") View our work
+              a(href="./work.html" , class="btn") View our work
             li 
-              a(href="#" , class="text-grey") View Pricing 
+              a(href="./pricing.html" , class="text-grey") View Pricing 
                 img(src="./assets/images/arrow-right-white.png" , alt="arrow-right" , class='ml-[12px]')
         img(src="./assets/images/illustration.svg", alt="illustration" , class="hero-section__img") 
   section(class='bg-grey')
@@ -109,7 +109,7 @@ block content
     div(class='bg-opacity-bg pt-[96px] px-[86px] min-h-[630px]') 
      h2(class='text-white mb-[24px]') Building stellar websites for early startups
      p(class='text-white') Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.
-   div(class='px-[50px] pt-[96px] pb-[48px]') 
+   div(class='px-[50px] p-[50px] ') 
     h3(class='text-white text-lg font-medium') Send inquiry
     p(class='text-grey mt-[16px]') Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
     form(action="", class="grid gap-y-3 my-[40px]")
@@ -117,6 +117,17 @@ block content
      input(type="email", placeholder="Email", class="py-[14px] px-4 border border-grey" required)
      input(type="text", placeholder="Paste your Figma design URL", class="py-[14px] px-4 border border-grey" required)
      button(class='btn font-medium mt-4 rounded-none') Send an Inquiry
-    a(href="#" class='flex justify-center text-grey') Get in touch with us
+    a(href="./contact.html" class='flex justify-center text-grey') Get in touch with us
      img(src="./assets/images/arrow-right-white.png" , alt="arrow-right" , class='ml-[12px]')
-  section     
+  section(class="container")
+   h2 Our blog 
+   ul(class='flex justify-between gap-5 mt-[64px]')
+    each item in our_blog
+     li
+      img(src=`./assets/images/${item.img}`, alt="" , class="w-full")
+      article(class='mt-[40px]')
+       p(class="mb-3")=item.date 
+       h3(class="text-base font-medium mb-3")=item.title 
+       p(class="mb-5")=item.describe    
+       a(href="#" , class="font-medium") Read more
+        img(src="./assets/images/arrow-right-black.png" , alt="arrow-right" , class='ml-[12px] align-middle')
