--- a/src/includes/header.pug
+++ b/src/includes/header.pug
@@ -13,7 +13,7 @@ div(class='container flex justify-between')
    li 
     a(href="./pricing.html" , class='link text-grey') Pricing
    li 
-    a(href="" , class='link text-grey') Faq
+    a(href="./faq.html" , class='link text-grey') Faq
    li  
     a(href="" , class='link text-grey') Blog
   a(href="./contact.html" , class=('btn')) Contact us   
