--- a/src/pages/features.pug
+++ b/src/pages/features.pug
@@ -16,7 +16,7 @@ block content
           p(class="text-grey mb-[48px]") Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
           ul(class="flex space-x-[40px]") 
             li
-              a(href="#" , class="btn") View Pricing
+              a(href="./pricing.html" , class="btn") View Pricing
         img(src="./assets/images/feature.svg", alt="feature" , class="hero-section__img") 
   block list-images
    ul(class="container flex justify-center flex-wrap gap-9 mt-[70px] ") 
@@ -58,7 +58,7 @@ block content
     block section_title 
      div(class='max-w-[409px]')
       h2(class='mb-[16px]') Frequently asked questions
-      a(href="" , class='text-royal-blue') Contact us for more info
+      a(href="./contact.html" , class='text-royal-blue') Contact us for more info
      div(class='w-[50%]')
       each item in info_accordion 
        details(class='accordion_details' , open=item.type)
