--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -23,7 +23,7 @@ block content
       div(class="max-w-[400px]") 
         h2(class="mb-[16px]") How we work
         p(class="mb-[16px]") Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-        a(href="#" , class="text-royal-blue") Get in touch with us
+        a(href="./work.html" , class="text-royal-blue") Get in touch with us
           img(src="./assets/images/arrow-right-blue.png" , alt="arrow-right" , class='ml-[12px]')
       ul(class='grid grid-cols-2 gap-[48px]')
         each item in works
@@ -95,7 +95,7 @@ block content
     block section_title 
      div(class='max-w-[409px]')
       h2(class='mb-[16px]') Frequently asked questions
-      a(href="" , class='text-royal-blue') Contact us for more info
+      a(href="./contact.html" , class='text-royal-blue') Contact us for more info
      div(class='w-[50%]')
       each item in info_accordion 
        details(class='accordion_details' , open=item.type)
