--- a/src/pages/pricing.pug
+++ b/src/pages/pricing.pug
@@ -26,7 +26,7 @@ block content
    block section_title 
     div(class='max-w-[409px]')
      h2(class='mb-[16px]') Frequently asked questions
-     a(href="" , class='text-royal-blue') Contact us for more info
+     a(href="./contact.html" , class='text-royal-blue') Contact us for more info
     div(class='w-[50%]')
      each item in info_accordion 
       details(class='accordion_details' , open=item.type)
