--- a/src/pages/work.pug
+++ b/src/pages/work.pug
@@ -11,7 +11,7 @@ block content
     span What we created
     h1(class='mb-[16px]') Our Work Portfolio
     p We help teams create great digital products by providing them with tools and technology to make the design-to-code process universally accessible.
-    ul(class="list_icons")
+  ul(class="list_icons")
      li 
       a(href="https://www.facebook.com/#" target="_blank") 
        i(class="fa-brands fa-facebook")
@@ -23,7 +23,7 @@ block content
        i(class="fa-brands fa-instagram") 
      li
       a(href="https://www.linkedin.com/company/linkd-pro" target="_blank") 
-       i(class="fa-brands fa-linkedin") 
+       i(class="fa-brands fa-linkedin")   
  section(class='container')
   ul(class='flex justify-center gap-x-11')
    li 
@@ -35,4 +35,8 @@ block content
    li 
     a(href="#" , class="menu_works" , data-menu="4" ) Figma Design      
   div(id="gallerie_works" , class="style-gallerie_works")
-    
+  block section__contenu
+   div(class='mx-auto max-w-[733px] text-center mt-[128px]')
+    h2 Let's build something great together
+    p(class='mt-[24px] mb-[32px]')  Nullam vitae purus at tortor mattis dapibus. Morbi purus est, ultricies nec dolor sit amet, scelerisque cursus purus.
+    a(href="./contact.html" , class="btn") Contact Us  
