--- a/src/includes/header.pug
+++ b/src/includes/header.pug
@@ -15,5 +15,5 @@ div(class='container flex justify-between')
    li 
     a(href="./faq.html" , class='link text-grey') Faq
    li  
-    a(href="" , class='link text-grey') Blog
+    a(href="./blog.html" , class='link text-grey') Blog
   a(href="./contact.html" , class=('btn')) Contact us   
