--- a/src/pages/layout.pug
+++ b/src/pages/layout.pug
@@ -10,9 +10,8 @@ html(lang="en")
         link(rel="stylesheet", href="./assets/css/style.css")
         script(src='https://kit.fontawesome.com/04a76b9a09.js', crossorigin='anonymous')
         script(src='https://code.jquery.com/jquery-3.6.0.min.js')
-        script(src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js')
-        script(src="./assets/js/script.js" defer)
-
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js')               
+        script(src="./assets/js/main.js" defer)
     body
     
      header(class='bg-tint-blue py-[34px]')
@@ -24,3 +23,4 @@ html(lang="en")
 
      footer
       include ../includes/footer
+    script(src="./assets/js/slick.js") 
