--- a/src/includes/header.pug
+++ b/src/includes/header.pug
@@ -1,7 +1,8 @@
 div(class='container flex justify-between')
- a(href="./index.html" , class=('text-base text-white'))
-  img(src="./assets/images/logo.png", alt="logo-finsweet" , class=('align-sub mr-[5px]'))
-  |Finsweet  
+ block logo
+  a(href="./index.html" , class=('text-base text-white'))
+   img(src="./assets/images/logo.png", alt="logo-finsweet" , class=('align-sub mr-[5px]'))
+   |Finsweet  
  nav(class='flex space-x-[48px]')
   ul(class='flex space-x-[32px]') 
    li
