--- a/src/pages/work.pug
+++ b/src/pages/work.pug
@@ -11,7 +11,8 @@ block content
     span What we created
     h1(class='mb-[16px]') Our Work Portfolio
     p We help teams create great digital products by providing them with tools and technology to make the design-to-code process universally accessible.
-  ul(class="list_icons")
+  block list_icons
+   ul(class="list_icons")
      li 
       a(href="https://www.facebook.com/#" target="_blank") 
        i(class="fa-brands fa-facebook")
